--- a/gb/19/4/21/n11203358.md
+++ b/gb/19/4/21/n11203358.md
@@ -1,56 +1,62 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/szzd1/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/szzd1/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/szzd1/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/szzd1/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/szzd1/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/szzd1/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/szzd1/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/szzd1/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/szzd1/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/szzd1/2/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5640.md#1">»ª¸®¾Û½¹</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/szzd1/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2>·ÇÖÞÖíÎÁ¼ÌÐøËÁÅ° º£ÄÏ4µØÇøÔÙ±¬ÒßÇé</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/04/GettyImages-1005311464-600x400-1.jpg" />
-<h6>×îºó±»¡°ÂÙÏÝ¡±µÄº£ÄÏÊ¡£¬¼Ì19ÈÕ³õ´Î±¬³öÒßÇéºó£¬º£¿ÚÊÐ4µØÇøÔÙ³öÏÖ·ÇÖÞÖíÎÁÒßÇé¡£ (Photo by Scott Olson/Getty Images)
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kdngvg317/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kdngvg317/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒé¦–é¡µ" alt="å¤§çºªå…ƒé¦–é¡µ"></a><a href="https://github.com/kdngvg317/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kdngvg317/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»" alt="å›½é™…æ–°é—»"></a><a href="https://github.com/kdngvg317/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kdngvg317/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»" alt="å¤§é™†æ–°é—»"></a><a href="https://github.com/kdngvg317/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kdngvg317/www/master/t/djy/5.jpg" title="å¤§çºªå…ƒè¯„è®º" alt="å¤§çºªå…ƒè¯„è®º"></a><a href="https://github.com/kdngvg317/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kdngvg317/www/master/t/djy/6.jpg" title="ä¼ ç»Ÿæ–‡åŒ–" alt="ä¼ ç»Ÿæ–‡åŒ–"></a><a href="https://github.com/kdngvg317/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kdngvg317/www/master/t/djy/7.jpg" title="ç”Ÿæ´»æ¶ˆè´¹" alt="ç”Ÿæ´»æ¶ˆè´¹"></a><a href="https://github.com/kdngvg317/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kdngvg317/www/master/t/djy/8.jpg" title="å¨±ä¹ä¼‘é—²" alt="å¨±ä¹ä¼‘é—²"></a><a href="https://github.com/kdngvg317/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kdngvg317/www/master/t/djy/9.jpg" title="å¥åº·" alt="å¥åº·"></a><a href="https://github.com/kdngvg317/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kdngvg317/www/master/t/djy/10a.jpg" title="ç‹¬å®¶" alt="ç‹¬å®¶"></a><a href="https://github.com/kdngvg317/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kdngvg317/www/master/t/djy/12a.jpg" title="å¤´æ¡è¦é—»" alt="å¤´æ¡è¦é—»"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kdngvg317/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/kdngvg317/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/kdngvg317/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/kdngvg317/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>éžæ´²çŒªç˜Ÿç»§ç»­è‚†è™ æµ·å—4åœ°åŒºå†çˆ†ç–«æƒ…</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/04/GettyImages-1005311464-600x400-1.jpg" />
+<h6>æœ€åŽè¢«â€œæ²¦é™·â€çš„æµ·å—çœï¼Œç»§19æ—¥åˆæ¬¡çˆ†å‡ºç–«æƒ…åŽï¼Œæµ·å£å¸‚4åœ°åŒºå†å‡ºçŽ°éžæ´²çŒªç˜Ÿç–«æƒ…ã€‚ (Photo by Scott Olson/Getty Images)
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê04ÔÂ21ÈÕÑ¶¡¿<a href="https://github.com/szzd1/djy/blob/master/gb/tag/%E9%9D%9E%E6%B4%B2%E7%8C%AA%E7%98%9F.md">·ÇÖÞÖíÎÁ</a>ÒßÇé¼ÌÐøÔÚÖÐ¹ú´óÂ½ÂûÑÓ£¬ÔÙÎÞÒ»Ê¡ÇøÊÐÐÒÃâ¡£×îºó±»¡°ÂÙÏÝ¡±µÄº£ÄÏÊ¡£¬¼Ì19ÈÕ³õ´Î±¬³öÒßÇéºó£¬º£¿ÚÊÐÐãÓ¢Çø¡¢³ÎÂõÏØ¡¢±£Í¤ÏØ¼°ÁêË®ÏØ£¬ÔÙ³öÏÖ·ÇÖÞÖíÎÁÒßÇé¡£</p>
-<h2>Ò»ÈÕ4µØÇø±¬<a href="https://github.com/szzd1/djy/blob/master/gb/tag/%E9%9D%9E%E6%B4%B2%E7%8C%AA%E7%98%9F.md">·ÇÖÞÖíÎÁ</a></h2>
-<p>4ÔÂ21ÈÕ£¬ÖÐ¹²Å©ÒµÅ©´å²¿ÐÂÎÅ°ì¹«ÊÒ·¢²¼£¬º£ÄÏÊ¡º£¿ÚÊÐÐãÓ¢ÇøÒ»ÑøÖ³»§¡¢³ÎÂõÏØÁ½ÑøÖ³»§¡¢±£Í¤Àè×åÃç×å×ÔÖÎÏØÒ»ÑøÖ³»§¡¢ÁêË®Àè×å×ÔÖÎÏØÁ½ÑøÖ³³¡»§·¢Éú·ÇÖÞÖíÎÁÒßÇé¡£</p>
-<p>½ØÖÁÄ¿Ç°£¬º£¿ÚÊÐÐãÓ¢Çø·¢ÉúÒßÇéÑøÖ³»§¹²´æÀ¸ÉúÖí252Í·£¬·¢²¡252Í·£¬ËÀÍö43Í·£»³ÎÂõÏØ·¢ÉúÒßÇéÁ½ÑøÖ³»§¹²´æÀ¸ÉúÖí172Í·£¬·¢²¡62Í·£¬ËÀÍö62Í·£»±£Í¤Àè×åÃç×å×ÔÖÎÏØ·¢ÉúÒßÇéÑøÖ³»§¹²´æÀ¸ÉúÖí7Í·£¬·¢²¡7Í·£¬ËÀÍö7Í·£»ÁêË®Àè×å×ÔÖÎÏØ·¢ÉúÒßÇéÁ½ÑøÖ³³¡»§¹²´æÀ¸ÉúÖí86Í·£¬·¢²¡34Í·£¬ËÀÍö34Í·¡£</p>
-<p>´ËÎªº£ÄÏÊ¡±¬·¢µÄµÚ6Æð·ÇÖÞÖíÎÁÒßÇé£¬Á½ÌìÇ°µÄ19ÈÕ£¬´óÂ½×îºóÒ»Ê¡º£ÄÏÊ×±¬ÒßÇé£¬º£ÄÏÙÙÖÝÊÐÁ½ÑøÖ³»§ºÍÍòÄþÊÐÁ½ÑøÖ³»§·¢Éú·ÇÖÞÖíÎÁÒßÇé¡£</p>
-<h2>8¸ö¶àÔÂ ÒßÇéÂûÑÓÈ«¹ú</h2>
-<p>2018Äê8ÔÂ3ÈÕ£¬ÖÐ¹úÊ×Àý·ÇÖÞÖíÎÁÒßÇéÔÚÁÉÄþÉòÑô±¬·¢£¬µ½4ÔÂ19ÈÕ£¬ÔÚ¶Ì¶ÌµÄ8¸ö¶àÔÂ£¬ÒßÇéÒÑ´«±éÕû¸ö´óÂ½µÄ31¸öÊ¡ÊÐ×ÔÖÎÇø¡£Áí¾ÝÖÐ¹²ÖÐÑëÔÖº¦Ó¦±äÖÐÐÄÍ³¼Æ£¬½ØÖÁ19ÈÕ£¬´óÂ½ÒÑÓÐ129Àý·ÇÖÞÖíÎÁÒßÇé¡£</p>
-<p>ÊÂÊµÉÏ£¬·ÇÖÞÖíÎÁÔÚ´óÂ½Ò»Ð©Ê¡·ÝÒ»±¬ÔÙ±¬£¬·¢Éú¶àÆðÒßÇé¡£½ö°²»ÕÒ»Ê¡£¬ÔÚ8ÔÂ30ÈÕÎßºþ´«³öµÚÒ»ÀýÒßÇéºó£¬9ÔÂ6ÈÕÎßºþÔÙ±¬·ÇÖÞÖíÎÁ£¬¾Ý²»ÍêÈ«Í³¼Æ£¬½ØÖÁÄ¿Ç°£¬°²»ÕÇ°ºó¹²·¢Éú8ÆðÒßÇé¡£</p>
-<p>ÖÐ¹ú´óÂ½ÎªÑÇÖÞÊ×´Î·¢Éú·ÇÖÞÖíÎÁ¹ú¼Ò£¬²¢ÇÒÒÑÂûÑÓÖÁÑÇÖÞÆäËüµØÇø£¬°üÀ¨Ô½ÄÏ¡£</p>
-<p>Õë¶Ô·ÇÖÞÖíÎÁ£¬Ä¿Ç°ÉÐÎÞÓÐÐ§µÄÒßÃçºÍÖÎÁÆ·½·¨¡£Æä²¡¶¾ÔÚÀä¶³ÖíÈâÖÐ¿É´æ»îÒ»Ç§Ìì¡£¸ÃÒßÇé´«È¾ÐÔÇ¿£¬·¢²¡ËÀÍöÂÊ¸ß£¬¿É´ï100%¡£</p>
-<p>ÔðÈÎ±à¼­£ºÐÄ¼ø</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´04æœˆ21æ—¥è®¯ã€‘<ahref="https://github.com/kdngvg317/djy/blob/master/gb/tag/%E9%9D%9E%E6%B4%B2%E7%8C%AA%E7%98%9F.md#1">éžæ´²çŒªç˜Ÿ</a>ç–«æƒ…ç»§ç»­åœ¨ä¸­å›½å¤§é™†è”“å»¶ï¼Œå†æ— ä¸€çœåŒºå¸‚å¹¸å…ã€‚æœ€åŽè¢«â€œæ²¦é™·â€çš„æµ·å—çœï¼Œç»§19æ—¥åˆæ¬¡çˆ†å‡ºç–«æƒ…åŽï¼Œæµ·å£å¸‚ç§€è‹±åŒºã€æ¾„è¿ˆåŽ¿ã€ä¿äº­åŽ¿åŠé™µæ°´åŽ¿ï¼Œå†å‡ºçŽ°éžæ´²çŒªç˜Ÿç–«æƒ…ã€‚</p>
+<h2>ä¸€æ—¥4åœ°åŒºçˆ†<ahref="https://github.com/kdngvg317/djy/blob/master/gb/tag/%E9%9D%9E%E6%B4%B2%E7%8C%AA%E7%98%9F.md#1">éžæ´²çŒªç˜Ÿ</a></h2>
+<p>4æœˆ21æ—¥ï¼Œä¸­å…±å†œä¸šå†œæ‘éƒ¨æ–°é—»åŠžå…¬å®¤å‘å¸ƒï¼Œæµ·å—çœæµ·å£å¸‚ç§€è‹±åŒºä¸€å…»æ®–æˆ·ã€æ¾„è¿ˆåŽ¿ä¸¤å…»æ®–æˆ·ã€ä¿äº­é»Žæ—è‹—æ—è‡ªæ²»åŽ¿ä¸€å…»æ®–æˆ·ã€é™µæ°´é»Žæ—è‡ªæ²»åŽ¿ä¸¤å…»æ®–åœºæˆ·å‘ç”Ÿéžæ´²çŒªç˜Ÿç–«æƒ…ã€‚</p>
+<p>æˆªè‡³ç›®å‰ï¼Œæµ·å£å¸‚ç§€è‹±åŒºå‘ç”Ÿç–«æƒ…å…»æ®–æˆ·å…±å­˜æ ç”ŸçŒª252å¤´ï¼Œå‘ç—…252å¤´ï¼Œæ­»äº¡43å¤´ï¼›æ¾„è¿ˆåŽ¿å‘ç”Ÿç–«æƒ…ä¸¤å…»æ®–æˆ·å…±å­˜æ ç”ŸçŒª172å¤´ï¼Œå‘ç—…62å¤´ï¼Œæ­»äº¡62å¤´ï¼›ä¿äº­é»Žæ—è‹—æ—è‡ªæ²»åŽ¿å‘ç”Ÿç–«æƒ…å…»æ®–æˆ·å…±å­˜æ ç”ŸçŒª7å¤´ï¼Œå‘ç—…7å¤´ï¼Œæ­»äº¡7å¤´ï¼›é™µæ°´é»Žæ—è‡ªæ²»åŽ¿å‘ç”Ÿç–«æƒ…ä¸¤å…»æ®–åœºæˆ·å…±å­˜æ ç”ŸçŒª86å¤´ï¼Œå‘ç—…34å¤´ï¼Œæ­»äº¡34å¤´ã€‚</p>
+<p>æ­¤ä¸ºæµ·å—çœçˆ†å‘çš„ç¬¬6èµ·éžæ´²çŒªç˜Ÿç–«æƒ…ï¼Œä¸¤å¤©å‰çš„19æ—¥ï¼Œå¤§é™†æœ€åŽä¸€çœæµ·å—é¦–çˆ†ç–«æƒ…ï¼Œæµ·å—å„‹å·žå¸‚ä¸¤å…»æ®–æˆ·å’Œä¸‡å®å¸‚ä¸¤å…»æ®–æˆ·å‘ç”Ÿéžæ´²çŒªç˜Ÿç–«æƒ…ã€‚</p>
+<h2>8ä¸ªå¤šæœˆ ç–«æƒ…è”“å»¶å…¨å›½</h2>
+<p>2018å¹´8æœˆ3æ—¥ï¼Œä¸­å›½é¦–ä¾‹éžæ´²çŒªç˜Ÿç–«æƒ…åœ¨è¾½å®æ²ˆé˜³çˆ†å‘ï¼Œåˆ°4æœˆ19æ—¥ï¼Œåœ¨çŸ­çŸ­çš„8ä¸ªå¤šæœˆï¼Œç–«æƒ…å·²ä¼ éæ•´ä¸ªå¤§é™†çš„31ä¸ªçœå¸‚è‡ªæ²»åŒºã€‚å¦æ®ä¸­å…±ä¸­å¤®ç¾å®³åº”å˜ä¸­å¿ƒç»Ÿè®¡ï¼Œæˆªè‡³19æ—¥ï¼Œå¤§é™†å·²æœ‰129ä¾‹éžæ´²çŒªç˜Ÿç–«æƒ…ã€‚</p>
+<p>äº‹å®žä¸Šï¼Œéžæ´²çŒªç˜Ÿåœ¨å¤§é™†ä¸€äº›çœä»½ä¸€çˆ†å†çˆ†ï¼Œå‘ç”Ÿå¤šèµ·ç–«æƒ…ã€‚ä»…å®‰å¾½ä¸€çœï¼Œåœ¨8æœˆ30æ—¥èŠœæ¹–ä¼ å‡ºç¬¬ä¸€ä¾‹ç–«æƒ…åŽï¼Œ9æœˆ6æ—¥èŠœæ¹–å†çˆ†éžæ´²çŒªç˜Ÿï¼Œæ®ä¸å®Œå…¨ç»Ÿè®¡ï¼Œæˆªè‡³ç›®å‰ï¼Œå®‰å¾½å‰åŽå…±å‘ç”Ÿ8èµ·ç–«æƒ…ã€‚</p>
+<p>ä¸­å›½å¤§é™†ä¸ºäºšæ´²é¦–æ¬¡å‘ç”Ÿéžæ´²çŒªç˜Ÿå›½å®¶ï¼Œå¹¶ä¸”å·²è”“å»¶è‡³äºšæ´²å…¶å®ƒåœ°åŒºï¼ŒåŒ…æ‹¬è¶Šå—ã€‚</p>
+<p>é’ˆå¯¹éžæ´²çŒªç˜Ÿï¼Œç›®å‰å°šæ— æœ‰æ•ˆçš„ç–«è‹—å’Œæ²»ç–—æ–¹æ³•ã€‚å…¶ç—…æ¯’åœ¨å†·å†»çŒªè‚‰ä¸­å¯å­˜æ´»ä¸€åƒå¤©ã€‚è¯¥ç–«æƒ…ä¼ æŸ“æ€§å¼ºï¼Œå‘ç—…æ­»äº¡çŽ‡é«˜ï¼Œå¯è¾¾100%ã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šå¿ƒé‰´</p>
+	
 <hr>
 
-#### Ô­ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/4/21/n11203358.htm">·ÇÖÞÖíÎÁ¼ÌÐøËÁÅ° º£ÄÏ4µØÇøÔÙ±¬ÒßÇé</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/3/30/n11150708.htm">¹ã¶«·ÇÖÞÖíÎÁÒßÇéÊ§¿Ø ÑøÖíÒµÑÏÖØÊÜ´´</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/3/18/n11122057.htm">·ÇÖÞÖíÎÁÐ§Ó¦ ÖÐ¹úÖí¼Û¿Ö´´ÀúÊ·ÐÂ¸ß</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/3/4/n11088896.htm">ÖÐ¹²³Æ³Ô²»ËÀÈË ·ÇÖÞÖíÎÁÈâ³É²ú¹©ÏúÒ»ÌõÁú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/2/22/n11064745.htm">·ÇÖÞÖíÎÁ¹¥ÏÝºÓ±±¸ß¼¶Öí³¡ µØ·½·âËøÒßÇé</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/2/21/n11060500.htm">·À¶Â·ÇÖÞÖíÎÁ ÃÀº£¹Øµ²ÏÂ10¶ÖÖÐ¹úÈâÖÆÆ·</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/2/20/n11057150.htm">·ÇÖÞÖíÎÁ¸¯Ê¬ÎÛÈ¾Ë®ÍÁ ²¡¶¾²ØÈËÌåÄÚÎ£º¦´ó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/2/19/n11056016.htm">·ÇÖÞÖíÎÁËÁÅ° ´óÂ½Àä¶³Ê³Æ·Òµ¼¸ºõÈ«ÂÙÏÝ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/12/28/n10939107.htm">Ì¨Íå×¨¼Ò£º·ÇÖÞÖíÎÁ²¡¶¾¿ÖÔÚ´óÂ½°ÙÄêÄÑ³ý</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/11/7/n10836918.htm">ºþ±±ÏÖÊ×Àý·ÇÖÞÖíÎÁ ËÀÖí¶ªÂ·±ßÊÓÆµÆØ¹â</a></li>
-> <li><a href="https://github.com/szzd1/djy/blob/master/gb/19/4/19/n11198819.md">º£ÄÏ±¬·ÇÖÞÖíÎÁ ´óÂ½ËùÓÐÊ¡·Ý¡°È«ÂÙÏÝ¡±</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/5/23/n11275458.htm">¸£¿ËË¹Å®Ö÷²¥»Ø»÷ÖÐ¹²´óÍâÐû£ºÄãÑ¡´íÁË¶ÔÏó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/23/n11273937.htm">¡¾·­Ç½±Ø¿´¡¿·ÖÎö£ºÖÐ·½Èô´ïÃÀÌ¸ÅÐÒªÇó¶ÔÖÐ¹úºÃ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/23/n11274639.htm">ÈÕÃ½£º³¯ÏÊÒ¥´«ÕþÈ¨½«¿åÌ¨ ÖÐ¹²Äâ×èÄÑÃñ³±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/23/n11275743.htm">Ã³Ò×Õ½µÄ±¾ÖÊÎÊÌâÊÇÊ²Ã´£¿ÍøÎÄ±»É¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/3/17/n11119102.htm">¡¾ÏÍºó´«¡¿Àú°Ë³¯»ÊµÛ Îå³¯¾ÓºóÎ»µÄÅ®ÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/14/n11258839.htm">½¯Î³¹ú±ôËÀÌåÑé Ç×ÑÛ¿´µ½¹ýÊÀµÄ¸¸Ç×½¯½éÊ¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/28/n11219079.htm">ÎÒÎªºÎ¶ÔËãÃü¸ÐÐËÈ¤£¿(ÏÂ)</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/22/n11273123.htm">ãë´¨µØÕðÉ½±ÀµØÁÑµÄÄÇÒ»¿Ì</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/22/n11273277.htm">±¸Ì¥Ð¾Æ¬ÄÜÓÃ£¿»ªÎªÇ°Ô±¹¤Ëµ³öÊµÇé</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/21/n11271462.htm">´¨ÆÕÕþ¸®ÏÂÁî½û»ªÎª ÖªÇéÈËÍ¸ÄÚÄ»</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/21/n11271556.htm">»ªÎªÄÚ²¿ÊÓÆµÆØ¹â ÃÀÃ½½ü¾àÀë²É·Ã·¢ÏÖÉ¶</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/22/n11273110.htm">¡¾ÐÂÎÅ¿´µã¡¿ÃÀÖÐÍÑ¹³ ´ÓÇÐ¸î»ªÎª¿ªÊ¼£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/21/n11271114.htm">¡¾ÐÂÎÅ¿´µã¡¿ÈÈ²¥ÃÀ¾çÔâ·â Ó°ÊÓÒ²³· ÍøÃñ·ßÅ­</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/20/n11268809.htm">¡¾ÐÂÎÅ¿´µã¡¿Ê§È¥¹È¸èÖ§³Ö »ªÎª½«ÊÜ¶à´ó´ò»÷</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/21/n11271256.htm">¡¶¸´Áª4¡·ÎÞÔµÃÜÔ¿ÑÓÆÚ ÖÐ¹²»ò¼À¡°ÏÞÃÀÁî¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/21/n11270397.htm">¸ßÔ²Ô²ÉúÁË£¡ÕÔÓÖÍ¢ÆØÏ²Ñ¶£ºÄ¸Å®Æ½°²</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/22/n11273585.htm">Á½¶ÈÉÏÁªºÏ¹ú´ó»áÑÝ½² ÍõÔ´³éÑÌÐÂÎÅµÇBBC</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/21/n11271041.htm">Ì¤ê©ÄÉºìÌºÇ°ÆØ»¨Ðõ ÕÂ×ÓâùÈÃÍô·å¶ºÈ¤µ£ÐÄ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/21/n11271441.htm">ºØ¸ßÔ²Ô²ÕýÊ½µ±Âè ¼Ö¾²ö©£ºÆÈ²»¼°´ý¿´¸ÉÅ®¶ù</a></li>
-</td><td VALIGN=TOP><a href="https://github.com/szzd1/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/szzd1/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/szzd1/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/szzd1/2/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd1/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/kdngvg317/djy/blob/master/gb/18/11/7/n10836918.md#1">æ¹–åŒ—çŽ°é¦–ä¾‹éžæ´²çŒªç˜Ÿ æ­»çŒªä¸¢è·¯è¾¹è§†é¢‘æ›å…‰</a></li>
+<li><a href="https://github.com/kdngvg317/djy/blob/master/gb/18/12/28/n10939107.md#1">å°æ¹¾ä¸“å®¶ï¼šéžæ´²çŒªç˜Ÿç—…æ¯’æåœ¨å¤§é™†ç™¾å¹´éš¾é™¤</a></li>
+<li><a href="https://github.com/kdngvg317/djy/blob/master/gb/19/2/19/n11056016.md#1">éžæ´²çŒªç˜Ÿè‚†è™ å¤§é™†å†·å†»é£Ÿå“ä¸šå‡ ä¹Žå…¨æ²¦é™·</a></li>
+<li><a href="https://github.com/kdngvg317/djy/blob/master/gb/19/2/20/n11057150.md#1">éžæ´²çŒªç˜Ÿè…å°¸æ±¡æŸ“æ°´åœŸ ç—…æ¯’è—äººä½“å†…å±å®³å¤§</a></li>
+<hr>
+
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/kdngvg317/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/6/n9809482.md#1" target="_blank">åæ–¯å»‰åšç‰©é¦†å‘Šè¯‰ä¸–ç•Œï¼šæŸ¬åŸ”å¯¨å‘ç”Ÿè¿‡ä»€ä¹ˆ</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/5/11/n2112872.md#1" target="_blank">æ³•è½®åŠŸå—éš¾ä¸­é‡å»ºä¸­åŽä»·å€¼è§‚</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/17/12/29/n10005600.md#1">ã€è¥¿æ¸¸ä¹‰è¶£ã€‘ä¹‹ä¸€ï¼šç¥žç§˜çš„æ¨µå¤«</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/10/n12745735.md#1">ã€è§£å¯†æ—¶åˆ†ã€‘æ•™å®—é¢„è¨€ï¼šæœ«æ—¥å®¡åˆ¤å°†è¿‘ï¼Ÿ</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/8/n12741216.md#1">ã€è§£å¯†æ—¶åˆ†ã€‘è¯ºæŸ¥ä¸¹çŽ›æ–¯é¢„è¨€è‹å…±æˆ–ä¸­å…±æ”¿æƒï¼Ÿ</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/5/n12734415.md#1">ä¸­å›½æ–°å¹´ï¼šå›žæº¯è¾›ä¸‘ä¸‰ç™¾å¹´ å±éš¾ä¸­å¯»æ›™å…‰</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/6/n12737563.md#1">ã€è¿œè§å¿«è¯„ã€‘ç¥žç§˜é¢„è¨€4åº¦æƒŠçŽ°æ­£å² é¢„å‘Šéœ¸çŽ‹å‡º</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/12/n12749457.md#1">ã€é‡æ’­ã€‘å¼¹åŠ¾å®¡è®¯ç¬¬4å¤© å·æ™®å¾‹å¸ˆå›¢é˜ŸæŠ—è¾©</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/12/n12749965.md#1">ã€è´¢å•†å¤©ä¸‹ã€‘æ–‡è´¢ç¥žæ­¦è´¢ç¥ž è°æ˜¯æ­£è´¢ç¥žï¼Ÿ</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/9/n12743509.md#1">ã€å¤§è¯è¥¿æ²¹ã€‘ä¸€ä»£å®—å¸ˆï¼ˆä¸‹ï¼‰ï¼šæ°¸æ’çš„æ‹¿ç ´ä»‘</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/10/n12745615.md#1">èµµä¸½é¢–æ–°å‰§æ€é’ç…§æ›å…‰ ç˜¦çš„ä»¤äººéœ‡æƒŠ</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/11/n12747190.md#1">ã€æ–°é—»å¤§å®¶è°ˆã€‘æ‹œä¹ é€šè¯è°è®©æ­¥ï¼Ÿä¸–å«çªæ”¹å£</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/11/n12746106.md#1">æ‹œç™»å’Œä¹ è¿‘å¹³é¦–æ¬¡é€šè¯ è°ˆäº†ä»€ä¹ˆ</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/10/n12745615.md#1">èµµä¸½é¢–æ–°å‰§æ€é’ç…§æ›å…‰ ç˜¦çš„ä»¤äººéœ‡æƒŠ</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/11/n12747753.md#1">æž—é’éœžä»¨å¥³æ–°å¹´æ”¶ç‰¹å¤§çº¢åŒ… é‡‘é¢æ›å…‰æƒŠå‘†ç½‘å‹</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/10/n12745090.md#1">31ç»„è‰ºäººæŽ¥åŠ›è¡¨æ¼” å°æ¹¾ã€Šçº¢ç™½ã€‹é™ªè§‚ä¼—å›´ç‚‰</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/10/n12745837.md#1">61å²é’Ÿæ¥šçº¢æ™’ç…§åº†ç”Ÿ ç½‘å‹å¤§èµžå†»é¾„å¤–è¡¨</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/11/n12747378.md#1">å­™ä¿ªæ™’æ‰‹å†™æ˜¥è”è¿Žæ–°å¹´ ç½‘å‹å–Šè¯é‚“è¶…è·Ÿç€å­¦</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/11/n12747555.md#1">é£žæ°´å¾ˆå¤šäººåšé”™äº† 5æ‹›ç»™è‚‰ç±»åŽ»è…¥å‘³</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/11/n12746195.md#1">ã€é‡æ’­ã€‘2021å¹´ä¸æƒ³çŠ¯å¤ªå² å‡ ä»¶äº‹åƒä¸‡åˆ«åš</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/11/n12747322.md#1">è®©å¤´å‘å˜é»‘å°±å–è¿™ç¢— 4ç§é¸¡æ±¤è¡¥æ°”åˆè¡¥è¡€</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/10/n12744890.md#1">æœ‰åƒè”¬æžœè¿˜ä¸å¤Ÿ 10æ‹›è½»æ¾è¡¥è¶³è†³é£Ÿçº¤ç»´</a></li>
+<li><a href="https://github.com/wqspyo301/djy/blob/master/gb/21/2/9/n12743330.md#1">ã€ç½—åŽ¨å¯»å‘³ä¹‹å¹´èœç³»åˆ—ã€‘ç¿¡ç¿ æ¯”ç›®é±¼</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/kdngvg317/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/kdngvg317/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/4/21/n11203358.htm">éžæ´²çŒªç˜Ÿç»§ç»­è‚†è™ æµ·å—4åœ°åŒºå†çˆ†ç–«æƒ…</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kdngvg317/djy/blob/master/gb/19/4/21/n11203358.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/kdngvg317/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/kdngvg317/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/kdngvg317/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/kdngvg317/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdngvg317/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
